tree-sitter-duck/test/corpus/expressions.txt
====================
Precedence
====================

let _ = a or b and not c == d | e ^ f & g << h + i * -j
let _ = a * b + c << d & e ^ f | g == h and i or j

---

(source_file
  (binding
    (discard)
    (binary_expression
      (identifier)
      (binary_expression
        (identifier)
        (unary_expression
          (binary_expression
            (identifier)
            (binary_expression
              (identifier)
              (binary_expression
                (identifier)
                (binary_expression
                  (identifier)
                  (binary_expression
                    (identifier)
                    (binary_expression
                      (identifier)
                      (binary_expression
                        (identifier)
                        (unary_expression
                          (identifier)))))))))))))
  (binding
    (discard)
    (binary_expression
      (binary_expression
        (binary_expression
          (binary_expression
            (binary_expression
              (binary_expression
                (binary_expression
                  (binary_expression
                    (binary_expression
                      (identifier)
                      (identifier))
                    (identifier))
                  (identifier))
                (identifier))
              (identifier))
            (identifier))
          (identifier))
        (identifier))
      (identifier))))

====================
Left associativity
====================

let _ = a - b - c

---

(source_file
  (binding
    (discard)
    (binary_expression
      (binary_expression
        (identifier)
        (identifier))
      (identifier))))

====================
Unary and postfix
====================

let _ = -f(x, 1).y[0]
let _ = ~-a
let _ = f()()

---

(source_file
  (binding
    (discard)
    (unary_expression
      (index_expression
        (field_expression
          (call_expression
            (identifier)
            (arguments
              (identifier)
              (integer)))
          (identifier))
        (integer))))
  (binding
    (discard)
    (unary_expression
      (unary_expression
        (identifier))))
  (binding
    (discard)
    (call_expression
      (call_expression
        (identifier)
        (arguments))
      (arguments))))

====================
Casts
====================

let _ = -x as i64
let _ = a + b as i64
let _ = x as i64 as f32
let _ = not x as bool
let _ = x as Box(i32)
let _ = a as! &u8 as uint

---

(source_file
  (binding
    (discard)
    (cast_expression
      (unary_expression
        (identifier))
      (named_type
        (identifier))))
  (binding
    (discard)
    (binary_expression
      (identifier)
      (cast_expression
        (identifier)
        (named_type
          (identifier)))))
  (binding
    (discard)
    (cast_expression
      (cast_expression
        (identifier)
        (named_type
          (identifier)))
      (named_type
        (identifier))))
  (binding
    (discard)
    (unary_expression
      (cast_expression
        (identifier)
        (named_type
          (identifier)))))
  (binding
    (discard)
    (cast_expression
      (identifier)
      (named_type
        (identifier)
        (type_arguments
          (named_type
            (identifier))))))
  (binding
    (discard)
    (cast_expression
      (cast_expression
        (identifier)
        (pointer_type
          (named_type
            (identifier))))
      (named_type
        (identifier)))))

====================
Pointers
====================

let _ = p.*.x.*
let _ = &p.x
let _ = -&p.* as u32
let _ = &var p.x
let _: &var &u8 = (&var P).size

---

(source_file
  (binding
    (discard)
    (dereference_expression
      (field_expression
        (dereference_expression
          (identifier))
        (identifier))))
  (binding
    (discard)
    (address_of_expression
      (field_expression
        (identifier)
        (identifier))))
  (binding
    (discard)
    (cast_expression
      (unary_expression
        (address_of_expression
          (dereference_expression
            (identifier))))
      (named_type
        (identifier))))
  (binding
    (discard)
    (address_of_expression
      (field_expression
        (identifier)
        (identifier))))
  (binding
    (discard)
    (pointer_type
      (pointer_type
        (named_type
          (identifier))))
    (field_expression
      (parenthesized_expression
        (address_of_expression
          (identifier)))
      (identifier))))

====================
Labelled arguments
====================

let _ = Point(x: 1, y: 2)
let _ = Box(&i32)(value: 1)

---

(source_file
  (binding
    (discard)
    (call_expression
      (identifier)
      (arguments
        (labeled_argument
          (identifier)
          (integer))
        (labeled_argument
          (identifier)
          (integer)))))
  (binding
    (discard)
    (call_expression
      (call_expression
        (identifier)
        (arguments
          (address_of_expression
            (identifier))))
      (arguments
        (labeled_argument
          (identifier)
          (integer))))))

====================
Tuples and unit
====================

let _ = ()
let _ = (a)
let _ = (a, (b, c),)
let _ = t.0.1
let _ = f(x).10

---

(source_file
  (binding
    (discard)
    (unit))
  (binding
    (discard)
    (parenthesized_expression
      (identifier)))
  (binding
    (discard)
    (tuple
      (identifier)
      (tuple
        (identifier)
        (identifier))))
  (binding
    (discard)
    (field_expression
      (field_expression
        (identifier)
        (tuple_index))
      (tuple_index)))
  (binding
    (discard)
    (field_expression
      (call_expression
        (identifier)
        (arguments
          (identifier)))
      (tuple_index))))

====================
Lists
====================

let _ = []
let _ = [1, 2,]
let _ = [0; n + 1]

---

(source_file
  (binding
    (discard)
    (list))
  (binding
    (discard)
    (list
      (integer)
      (integer)))
  (binding
    (discard)
    (repeated_list
      (integer)
      (binary_expression
        (identifier)
        (integer)))))

====================
Module properties
====================

let _ = module.static.len

---

(source_file
  (binding
    (discard)
    (field_expression
      (module_property
        (identifier))
      (identifier))))

====================
Numbers
====================

let _ = [1_000, 0xff, 0b101, 0o17, 1.5, 2e3, 1.5e-2, 1.foo]

---

(source_file
  (binding
    (discard)
    (list
      (integer)
      (integer)
      (integer)
      (integer)
      (float)
      (float)
      (float)
      (field_expression
        (integer)
        (identifier)))))

====================
Strings
====================

let _ = "hi\n\"there\" \u{1F986}"
let _ = " # not a comment"
let _ = ""

---

(source_file
  (binding
    (discard)
    (string
      (string_content)
      (escape_sequence)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)))
  (binding
    (discard)
    (string
      (string_content)))
  (binding
    (discard)
    (string)))

====================
Pipes
====================

let _ = x |> f(_, 1)
let _ = a or b |> _ + 1 |> f(_, _)
let _ = f(x |> _.a)
let _ = f(_: 1)

---

(source_file
  (binding
    (discard)
    (pipe_expression
      (identifier)
      (call_expression
        (identifier)
        (arguments
          (placeholder)
          (integer)))))
  (binding
    (discard)
    (pipe_expression
      (pipe_expression
        (binary_expression
          (identifier)
          (identifier))
        (binary_expression
          (placeholder)
          (integer)))
      (call_expression
        (identifier)
        (arguments
          (placeholder)
          (placeholder)))))
  (binding
    (discard)
    (call_expression
      (identifier)
      (arguments
        (pipe_expression
          (identifier)
          (field_expression
            (placeholder)
            (identifier))))))
  (binding
    (discard)
    (call_expression
      (identifier)
      (arguments
        (labeled_argument
          (identifier)
          (integer))))))

====================
Function types
====================

let f: fn(i32, &u8) -> bool = g
let _ = malloc(fn())
let _ = x as fn(A) -> fn(B) -> C
let _ = array(fn(i32) -> u8)(len: 1, ptr: p)
let _: &fn(lib.T) -> &R = pick()(1)

---

(source_file
  (binding
    (identifier)
    (function_type
      (parameter_types
        (named_type
          (identifier))
        (pointer_type
          (named_type
            (identifier))))
      (named_type
        (identifier)))
    (identifier))
  (binding
    (discard)
    (call_expression
      (identifier)
      (arguments
        (function_type
          (parameter_types)))))
  (binding
    (discard)
    (cast_expression
      (identifier)
      (function_type
        (parameter_types
          (named_type
            (identifier)))
        (function_type
          (parameter_types
            (named_type
              (identifier)))
          (named_type
            (identifier))))))
  (binding
    (discard)
    (call_expression
      (call_expression
        (identifier)
        (arguments
          (function_type
            (parameter_types
              (named_type
                (identifier)))
            (named_type
              (identifier)))))
      (arguments
        (labeled_argument
          (identifier)
          (integer))
        (labeled_argument
          (identifier)
          (identifier)))))
  (binding
    (discard)
    (pointer_type
      (function_type
        (parameter_types
          (qualified_type
            (identifier)
            (named_type
              (identifier))))
        (pointer_type
          (named_type
            (identifier)))))
    (call_expression
      (call_expression
        (identifier)
        (arguments))
      (arguments
        (integer)))))

====================
Dot names
====================

let a: Color = .red
let b = f(.some(1), x: .none) == .ok

---

(source_file
  (binding
    (identifier)
    (named_type
      (identifier))
    (dot_expression
      (identifier)))
  (binding
    (identifier)
    (binary_expression
      (call_expression
        (identifier)
        (arguments
          (call_expression
            (dot_expression
              (identifier))
            (arguments
              (integer)))
          (labeled_argument
            (identifier)
            (dot_expression
              (identifier)))))
      (dot_expression
        (identifier)))))

====================
Assignment
====================

fn f():
    a = b = c
    a += b |> g(_)
    while (n = next()) != 0:
        pass
    let x = g(a = 1, p.* = 2)

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (assignment_expression
          (identifier)
          (assignment_expression
            (identifier)
            (identifier))))
      (expression_statement
        (assignment_expression
          (identifier)
          (pipe_expression
            (identifier)
            (call_expression
              (identifier)
              (arguments
                (placeholder))))))
      (while_statement
        (binary_expression
          (parenthesized_expression
            (assignment_expression
              (identifier)
              (call_expression
                (identifier)
                (arguments))))
          (integer))
        (block
          (pass_statement)))
      (binding
        (identifier)
        (call_expression
          (identifier)
          (arguments
            (assignment_expression
              (identifier)
              (integer))
            (assignment_expression
              (dereference_expression
                (identifier))
              (integer))))))))

====================
Return expressions
====================

fn f():
    a or return b or c
    x |> g(_) |> return _
    f(return, return -1)
    return a = n |> f(_)

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (binary_expression
          (identifier)
          (return_expression
            (binary_expression
              (identifier)
              (identifier)))))
      (expression_statement
        (pipe_expression
          (pipe_expression
            (identifier)
            (call_expression
              (identifier)
              (arguments
                (placeholder))))
          (return_expression
            (placeholder))))
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (return_expression)
            (return_expression
              (unary_expression
                (integer))))))
      (expression_statement
        (return_expression
          (assignment_expression
            (identifier)
            (pipe_expression
              (identifier)
              (call_expression
                (identifier)
                (arguments
                  (placeholder))))))))))
